build: Clean up configure.ac and fix make (dist)check

--- a/src/driver/0.14.x/Makefile.am
+++ b/src/driver/0.14.x/Makefile.am
@@ -13,7 +13,7 @@ endif
 
 AM_CFLAGS =  -g \
 	-DPACKAGE_ICONDIR=\"$(datadir)/valadoc/icons/\" \
-	-I ../../libvaladoc/ \
+	-I $(top_builddir)/src/libvaladoc/ \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
 	$(LIBGVC_CFLAGS) \
@@ -58,7 +58,7 @@ libdriver.vala.stamp: $(libdriver_la_VALASOURCES)
 
 
 libdriver_la_LIBADD = \
-	../../libvaladoc/libvaladoc.la \
+	$(top_builddir)/src/libvaladoc/libvaladoc.la \
 	$(GLIB_LIBS) \
 	$(LIBVALA_0_14_X_LIBS) \
 	$(LIBVALA_0_13_0_LIBS) \
@@ -68,7 +68,7 @@ libdriver_la_LIBADD = \
 	$(NULL)
 
 
-EXTRA_DIST = $(libdriver_la_VALASOURCES)  libdriver.vala.stamp 
+EXTRA_DIST = $(libdriver_la_VALASOURCES) libdriver.vala.stamp 
 
 
 MAINTAINERCLEANFILES = \
