--- a/src/driver/0.16.x/Makefile.am
+++ b/src/driver/0.16.x/Makefile.am
@@ -12,7 +12,7 @@ endif
 
 AM_CFLAGS =  -g \
 	-DPACKAGE_ICONDIR=\"$(datadir)/valadoc/icons/\" \
-	-I ../../libvaladoc/ \
+	-I $(top_builddir)/src/libvaladoc/ \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
 	$(LIBGVC_CFLAGS) \
@@ -57,7 +57,7 @@ libdriver.vala.stamp: $(libdriver_la_VALASOURCES)
 
 
 libdriver_la_LIBADD = \
-	../../libvaladoc/libvaladoc.la \
+	$(top_builddir)/src/libvaladoc/libvaladoc.la \
 	$(GLIB_LIBS) \
 	$(LIBVALA_0_15_0_LIBS) \
 	$(LIBVALA_0_16_X_LIBS) \
