--- a/src/driver/0.18.x/Makefile.am
+++ b/src/driver/0.18.x/Makefile.am
@@ -16,7 +16,7 @@ endif
 
 AM_CFLAGS =  -g \
 	-DPACKAGE_ICONDIR=\"$(datadir)/valadoc/icons/\" \
-	-I ../../libvaladoc/ \
+	-I $(top_builddir)/src/libvaladoc/ \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
 	$(LIBGVC_CFLAGS) \
@@ -63,7 +63,7 @@ libdriver.vala.stamp: $(libdriver_la_VALASOURCES)
 
 
 libdriver_la_LIBADD = \
-	../../libvaladoc/libvaladoc.la \
+	$(top_builddir)/src/libvaladoc/libvaladoc.la \
 	$(GLIB_LIBS) \
 	$(LIBVALA_0_18_X_LIBS) \
 	$(LIBVALA_0_17__1_3_LIBS) \
