--- a/src/driver/0.16.x/Makefile.am
+++ b/src/driver/0.16.x/Makefile.am
@@ -51,8 +51,8 @@ libdriver_la_SOURCES =      \
 	$(NULL)
 
 
-libdriver.vala.stamp: $(libdriver_la_VALASOURCES)
-	$(VALAC) $(VALA_FLAGS) -C --vapidir $(VERSIONED_VAPI_DIR) --vapidir $(top_srcdir)/src/vapi --vapidir $(top_srcdir)/src/libvaladoc --pkg libvala-0.16 --pkg gee-0.8 --pkg valadoc-1.0 --basedir . $^
+libdriver.vala.stamp: $(libdriver_la_VALASOURCES) Makefile
+	$(VALAC) $(VALA_FLAGS) -C --vapidir $(VERSIONED_VAPI_DIR) --vapidir $(top_srcdir)/src/vapi --vapidir $(top_srcdir)/src/libvaladoc --pkg libvala-0.16 --pkg gee-0.8 --pkg valadoc-1.0 $(filter %.vala %.c,$^)
 	touch $@
 
 
