gdk-x11-3.0: Switch to GIR

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -480,7 +480,7 @@ gdk-x11-2.0:
 	$(GENVAPI) --library $(srcdir)/gdk-x11-2.0 $(PACKAGESDIR)/gdk-x11-2.0/gdk-x11-2.0-custom.vala $(PACKAGESDIR)/gdk-x11-2.0/gdk-x11-2.0.gi
 
 gdk-x11-3.0:
-	$(GENVAPI) --library $(srcdir)/gdk-x11-3.0 $(PACKAGESDIR)/gdk-x11-3.0/gdk-x11-3.0.gi
+	$(GENVAPI) --library $(srcdir)/gdk-x11-3.0 --pkg gio-2.0 --pkg gdk-3.0 --pkg x11 --metadatadir $(METADATADIR) $(METADATADIR)/GdkX11-3.0-custom.vala $(GIRDIR)/GdkX11-3.0.gir
 
 gdl-1.0:
 	$(GENVAPI) --library $(srcdir)/gdl-1.0 $(PACKAGESDIR)/gdl-1.0/gdl-1.0-custom.vala $(PACKAGESDIR)/gdl-1.0/gdl-1.0.gi
