build: Avoid shipping generated c-code in tarball
Also clean up and refactor Makefiles on the way.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,4 @@
-# src/Makefile.am
-
 NULL =
-
 
 SUBDIRS = \
 	libvaladoc \
@@ -10,4 +7,8 @@ SUBDIRS = \
 	driver \
 	$(NULL)
 
+EXTRA_DIST = \
+	vapi/config.vapi \
+	vapi/libgvc.vapi \
+	$(NULL)
 
