--- a/src/valadoc/Makefile.am
+++ b/src/valadoc/Makefile.am
@@ -1,55 +1,66 @@
 NULL =
 
-DEFAULT_DRIVER = "`$(VALAC) --version`"
+DEFAULT_DRIVER = "`$(VALAC) --api-version >& /dev/null; if [ $$? = 0 ]; then $(VALAC) --api-version; else $(VALAC) --version; fi`"
 
-
-AM_CFLAGS =                                 \
+AM_CFLAGS = \
 	-DPACKAGE_DATADIR=\"$(libdir)/valadoc\" \
-	-DPACKAGE_VERSION=\"$(VERSION)\"        \
-	-DDEFAULT_DRIVER=\"$(DEFAULT_DRIVER)\"         \
-	-I $(top_builddir)/src/libvaladoc/                       \
-	$(GLIB_CFLAGS)                          \
-	$(LIBGEE_CFLAGS)                        \
-	$(GMODULE_CFLAGS)                       \
-	$(LIBGVC_CFLAGS)                        \
+	-DPACKAGE_VERSION=\"$(VERSION)\" \
+	-DDEFAULT_DRIVER=\"$(DEFAULT_DRIVER)\" \
+	-I $(top_builddir)/src/libvaladoc/ \
+	$(GLIB_CFLAGS) \
+	$(LIBGEE_CFLAGS) \
+	$(GMODULE_CFLAGS) \
+	$(LIBGVC_CFLAGS) \
+	-g \
+	-w \
 	$(NULL)
 
-
-bin_PROGRAMS = valadoc
-
+AM_VALAFLAGS = \
+	$(VALAFLAGS) \
+	--vapidir $(top_srcdir)/src/vapi/ \
+	--vapidir $(top_builddir)/src/libvaladoc/ \
+	--basedir $(srcdir) \
+	--directory $(builddir) \
+	-C \
+	-g \
+	$(NULL)
 
 BUILT_SOURCES = valadoc.vala.stamp
 
+bin_PROGRAMS = valadoc
 
 valadoc_VALASOURCES = \
-	valadoc.vala      \
+	valadoc.vala \
     $(NULL)
 
-
-valadoc_SOURCES = \
+nodist_valadoc_SOURCES = \
 	$(valadoc_VALASOURCES:.vala=.c) \
 	$(NULL)
 
-
-valadoc_LDADD =                 \
+valadoc_LDADD = \
 	$(top_builddir)/src/libvaladoc/libvaladoc.la \
-	$(GLIB_LIBS)                \
-	$(GMODULE_LIBS)             \
-	$(LIBGVC_LIBS)              \
-	$(LIBGEE_LIBS)              \
+	$(GLIB_LIBS) \
+	$(GMODULE_LIBS) \
+	$(LIBGVC_LIBS) \
+	$(LIBGEE_LIBS) \
 	$(NULL)
-
 
 valadoc.vala.stamp: $(valadoc_VALASOURCES) Makefile
-	$(VALAC) -C --pkg config --pkg gee-0.8 --pkg gmodule-2.0 --vapidir $(top_srcdir)/src/vapi/ --vapidir $(top_builddir)/src/libvaladoc/ --pkg valadoc-1.0 $(filter %.vala %.c,$^)
+	$(VALAC) \
+		$(AM_VALAFLAGS) \
+		--pkg config \
+		--pkg gee-0.8 \
+		--pkg gmodule-2.0 \
+		--pkg valadoc-1.0 \
+		$(filter %.vala %.c,$^)
 	touch $@
 
+EXTRA_DIST = \
+	$(valadoc_VALASOURCES) \
+	$(NULL)
 
-EXTRA_DIST = $(valadoc_VALASOURCES)  valadoc.vala.stamp 
-
-
-MAINTAINERCLEANFILES =              \
-	$(valadoc_VALASOURCES:.vala=.c) \
-	$(valadoc_VALASOURCES:.vala=.h) \
+CLEANFILES = \
+	$(BUILT_SOURCES) \
+	$(nodist_valadoc_SOURCES) \
 	$(NULL)
 
