--- a/src/doclets/htm/Makefile.am
+++ b/src/doclets/htm/Makefile.am
@@ -1,55 +1,48 @@
 NULL =
 
-
-AM_CFLAGS =  -g \
+AM_CFLAGS = \
 	-DPACKAGE_ICONDIR=\"$(datadir)/valadoc/icons/\" \
 	-I $(top_builddir)/src/libvaladoc/ \
-	$(LIBGVC_CFLAGS) \
 	$(GLIB_CFLAGS) \
 	$(LIBGEE_CFLAGS) \
+	$(LIBGVC_CFLAGS) \
+	-g \
+	-w \
 	$(NULL)
 
-# Without the LIBGVC_CFLAGS, we get 
-# make[5]: Entering directory `/home/richard/.local/src/valadoc/src/doclets/devhelp'
-#  CC       doclet.lo
-# In file included from /usr/include/graphviz/gvc.h:17:0,
-#                  from ../../libvaladoc/valadoc-1.0.h:15,
-#                  from doclet.c:28:
-# /usr/include/graphviz/types.h:49:20: fatal error: cgraph.h: No such file or directory
-#  #include <cgraph.h>
-#                     ^
-# compilation terminated.
-
+AM_VALAFLAGS = \
+	$(VALAFLAGS) \
+	--vapidir $(top_srcdir)/src/vapi \
+	--vapidir $(top_builddir)/src/libvaladoc \
+	--basedir $(srcdir) \
+	--directory $(builddir) \
+	-C \
+	-g \
+	$(NULL)
 
 BUILT_SOURCES = libdoclet.vala.stamp
 
+doclet_LTLIBRARIES = libdoclet.la
 
 docletdir = $(libdir)/valadoc/doclets/html
 
-
 libdoclet_la_LDFLAGS = -module -avoid-version -no-undefined
 
-
-doclet_LTLIBRARIES =  \
-	libdoclet.la      \
-	$(NULL)
-
-
 libdoclet_la_VALASOURCES = \
-	doclet.vala            \
+	doclet.vala \
 	$(NULL)
 
-
-libdoclet_la_SOURCES =  \
-	libdoclet.vala.stamp \
+nodist_libdoclet_la_SOURCES = \
 	$(libdoclet_la_VALASOURCES:.vala=.c) \
 	$(NULL)
 
-
 libdoclet.vala.stamp: $(libdoclet_la_VALASOURCES) Makefile
-	$(VALAC) -C --vapidir $(top_srcdir)/src/vapi --vapidir $(top_srcdir)/src/libvaladoc --pkg gee-0.8 --pkg valadoc-1.0 $(filter %.vala %.c,$^)
+	$(VALAC) \
+		$(AM_VALAFLAGS) \
+		--pkg gee-0.8 \
+		--pkg valadoc-1.0 \
+		$(filter %.vala %.c,$^)
 	touch $@
-
 
 libdoclet_la_LIBADD = \
 	$(top_builddir)/src/libvaladoc/libvaladoc.la \
@@ -57,12 +50,12 @@ libdoclet_la_LIBADD = \
 	$(LIBGEE_LIBS) \
 	$(NULL)
 
-
-EXTRA_DIST = $(libdoclet_la_VALASOURCES)  libdoclet.vala.stamp 
-
-
-MAINTAINERCLEANFILES = \
-	$(libdoclet_la_VALASOURCES:.vala=.c) \
+EXTRA_DIST = \
+	$(libdoclet_la_VALASOURCES) \
 	$(NULL)
 
+CLEANFILES = \
+	$(BUILT_SOURCES) \
+	$(nodist_libdoclet_la_SOURCES) \
+	$(NULL)
 
