build: Add missing condition for valac <= 0.23.1 driver builds

--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -28,6 +28,10 @@ if HAVE_LIBVALA_0_22_X
 DRIVER_0_22_X_DIR = 0.22.x
 endif
 
+if HAVE_LIBVALA_0_23_1
+DRIVER_0_24_X_DIR = 0.24.x
+endif
+
 if HAVE_LIBVALA_0_24_X
 DRIVER_0_24_X_DIR = 0.24.x
 endif
