--- a/src/valadoc/Makefile.am
+++ b/src/valadoc/Makefile.am
@@ -1,6 +1,6 @@
 NULL =
 
-DEFAULT_DRIVER = "`$(VALAC) --api-version >& /dev/null; if [ $$? = 0 ]; then $(VALAC) --api-version; else $(VALAC) --version; fi`"
+DEFAULT_DRIVER = $(shell $(VALAC) --api-version >& /dev/null; if [ $$? = 0 ]; then $(VALAC) --api-version; else $(VALAC) --version; fi)
 
 AM_CFLAGS = \
 	-DPACKAGE_DATADIR=\"$(libdir)/valadoc\" \
