Use POSIX redirect, for portability.
This fixes: "Syntax error: Bad fd number". on POSIX sh.

https://bugzilla.gnome.org/show_bug.cgi?id=722486

--- a/src/libvaladoc/Makefile.am
+++ b/src/libvaladoc/Makefile.am
@@ -1,6 +1,6 @@
 NULL =
 
-DEFAULT_DRIVER = $(shell $(VALAC) --api-version >& /dev/null; if [ $$? = 0 ]; then $(VALAC) --api-version; else $(VALAC) --version; fi)
+DEFAULT_DRIVER = $(shell $(VALAC) --api-version >/dev/null 2>&1; if [ $$? = 0 ]; then $(VALAC) --api-version; else $(VALAC) --version; fi)
 
 AM_CFLAGS = \
 	-DPACKAGE_ICONDIR=\"$(datadir)/valadoc/icons/\" \
