--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -94,6 +94,7 @@ TESTS = \
 	structs/bug667890.vala \
 	structs/bug669580.vala \
 	structs/bug685177.vala \
+	structs/bug686190.vala \
 	structs/bug690380.vala \
 	delegates/delegates.vala \
 	delegates/bug539166.vala \
