build: Fix missing backslashes in lists
https://bugzilla.gnome.org/show_bug.cgi?id=725496

--- a/ccode/Makefile.am
+++ b/ccode/Makefile.am
@@ -9,7 +9,7 @@ AM_CPPFLAGS = \
 BUILT_SOURCES = ccode.vala.stamp
 
 noinst_LTLIBRARIES = \
-	libvalaccode.la
+	libvalaccode.la \
 	$(NULL)
 
 libvalaccode_la_VALASOURCES = \
