--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -58,6 +58,7 @@ TESTS = \
 	methods/bug663210.vala \
 	methods/bug723009.vala \
 	methods/bug723195.vala \
+	methods/bug726347.vala \
 	methods/generics.vala \
 	control-flow/break.vala \
 	control-flow/expressions-conditional.vala \
