driver: Add support for vala-0.26

--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,9 @@ AM_CONDITIONAL(HAVE_CGRAPH, test "$have_cgraph" = "yes")
 ## Drivers:
 ##
 
+PKG_CHECK_MODULES(LIBVALA_0_26_X, libvala-0.26 > 0.23.1, have_libvala_0_26_x="yes", have_libvala_0_26_x="no")
+AM_CONDITIONAL(HAVE_LIBVALA_0_26_X, test "$have_libvala_0_26_x" = "yes")
+
 PKG_CHECK_MODULES(LIBVALA_0_24_X, libvala-0.24 > 0.23.1, have_libvala_0_24_x="yes", have_libvala_0_24_x="no")
 AM_CONDITIONAL(HAVE_LIBVALA_0_24_X, test "$have_libvala_0_24_x" = "yes")
 
@@ -113,6 +116,7 @@ src/driver/0.18.x/Makefile
 src/driver/0.20.x/Makefile
 src/driver/0.22.x/Makefile
 src/driver/0.24.x/Makefile
+src/driver/0.26.x/Makefile
 src/doclets/Makefile
 src/doclets/html/Makefile
 src/doclets/devhelp/Makefile
