--- a/codegen/Makefile.am
+++ b/codegen/Makefile.am
@@ -1,3 +1,5 @@
+include $(top_srcdir)/Makefile.common
+
 NULL =
 
 AM_CPPFLAGS = \
@@ -57,7 +59,17 @@ codegeninclude_HEADERS = \
 	$(NULL)
 
 codegen.vapi codegen.vala.stamp: $(libvala_la_VALASOURCES)
-	$(VALA_V)$(VALAC) $(COVERAGE_VALAFLAGS) $(VALAFLAGS) -C --vapidir $(srcdir)/../vapi --pkg gobject-2.0 --vapidir $(srcdir)/../gee --pkg gee --vapidir $(srcdir)/../ccode --pkg ccode --vapidir $(srcdir)/../vala --pkg vala -H valacodegen.h --library codegen $^
+	$(VALA_V)$(VALAC) \
+		$(COVERAGE_VALAFLAGS) \
+		$(VALAFLAGS) \
+		-C \
+		--vapidir $(top_srcdir)/vapi --pkg gobject-2.0 \
+		--vapidir $(top_srcdir)/gee --pkg gee \
+		--vapidir $(top_srcdir)/ccode --pkg ccode \
+		--vapidir $(top_srcdir)/vala --pkg vala \
+		-H valacodegen.h \
+		--library codegen \
+		$^
 	@touch $@
 
 libvala@PACKAGE_SUFFIX@_la_LDFLAGS = -no-undefined
@@ -65,8 +77,8 @@ libvala@PACKAGE_SUFFIX@_la_LDFLAGS = -no-undefined
 libvala@PACKAGE_SUFFIX@_la_LIBADD = \
 	$(COVERAGE_LIBS) \
 	$(GLIB_LIBS) \
-	../vala/libvalacore.la \
-	../ccode/libvalaccode.la \
+	$(top_builddir)/vala/libvalacore.la \
+	$(top_builddir)/ccode/libvalaccode.la \
 	$(NULL)
 
 EXTRA_DIST = $(libvala_la_VALASOURCES) codegen.vapi codegen.vala.stamp
@@ -76,8 +88,3 @@ MAINTAINERCLEANFILES = \
 	valacodegen.h \
 	$(libvala_la_VALASOURCES:.vala=.c) \
 	$(NULL)
-
-VALA_V = $(VALA_V_$(V))
-VALA_V_ = $(VALA_V_$(AM_DEFAULT_VERBOSITY))
-VALA_V_0 = @echo "  VALAC " $^;
-
