--- a/vala/Makefile.am
+++ b/vala/Makefile.am
@@ -1,3 +1,5 @@
+include $(top_srcdir)/Makefile.common
+
 NULL =
 
 AM_CPPFLAGS = \
@@ -173,13 +175,22 @@ valainclude_HEADERS = \
 	$(NULL)
 
 vala.vapi vala.vala.stamp: $(libvalacore_la_VALASOURCES)
-	$(VALA_V)$(VALAC) $(COVERAGE_VALAFLAGS) $(VALAFLAGS) -C --vapidir $(srcdir)/../vapi --pkg gobject-2.0 --vapidir $(srcdir)/../gee --pkg gee --pkg config -H vala.h --library vala $^
+	$(VALA_V)$(VALAC) \
+		$(COVERAGE_VALAFLAGS) \
+		$(VALAFLAGS) \
+		-C \
+		--vapidir $(top_srcdir)/vapi --pkg gobject-2.0 \
+		--vapidir $(top_srcdir)/gee --pkg gee \
+		--pkg config \
+		-H vala.h \
+		--library vala \
+		$^
 	@touch $@
 
 libvalacore_la_LIBADD = \
 	$(COVERAGE_LIBS) \
 	$(GLIB_LIBS) \
-	../gee/libgee.la \
+	$(top_builddir)/gee/libgee.la \
 	$(NULL)
 
 EXTRA_DIST = $(libvalacore_la_VALASOURCES) vala.vapi vala.vala.stamp
@@ -189,7 +200,3 @@ MAINTAINERCLEANFILES = \
 	vala.h \
 	$(libvalacore_la_VALASOURCES:.vala=.c) \
 	$(NULL)
-
-VALA_V = $(VALA_V_$(V))
-VALA_V_ = $(VALA_V_$(AM_DEFAULT_VERBOSITY))
-VALA_V_0 = @echo "  VALAC " $^;
