gstreamer-rtsp-server-1.0: update bindings
The previous bindings only worked for an unstable pre-release version
of gstreamer-rtsp-server-1.0.  The new (stable) version is not
backwards compatible, so neither can the Vala bindings be.  Since we
had to break backwards compatibilitiy, why not go big?  I've taken the
opportunity to move the bindings into the Gst.RTSPServer namespace to
better match the other gstreamer bindings, as well as other assorted
less-disruptive clean-ups.

Fixes bug 723910.

--- a/vapi/Makefile.am
+++ b/vapi/Makefile.am
@@ -627,7 +627,7 @@ gstreamer-rtsp-1.0:
 	$(GENVAPI) --library $(srcdir)/gstreamer-rtsp-1.0 --pkg gstreamer-sdp-1.0 --metadatadir $(METADATADIR) $(GIRDIR)/GstRtsp-1.0.gir
 
 gstreamer-rtsp-server-1.0:
-	$(GENVAPI) --library $(srcdir)/gstreamer-rtsp-server-1.0 --pkg gstreamer-rtsp-1.0 --metadatadir $(METADATADIR) $(GIRDIR)/GstRtspServer-1.0.gir
+	$(GENVAPI) --library $(srcdir)/gstreamer-rtsp-server-1.0 --pkg gstreamer-rtsp-1.0 --pkg gstreamer-net-1.0 --metadatadir $(METADATADIR) $(GIRDIR)/GstRtspServer-1.0.gir
 
 gstreamer-sdp-1.0:
 	$(GENVAPI) --library $(srcdir)/gstreamer-sdp-1.0 --pkg gstreamer-1.0 --metadatadir $(METADATADIR) $(GIRDIR)/GstSdp-1.0.gir
