gir-importer: add support for markdown

--- a/src/libvaladoc/Makefile.am
+++ b/src/libvaladoc/Makefile.am
@@ -52,6 +52,9 @@ libvaladoc_la_VALASOURCES = \
 	documentation/wikiscanner.vala \
 	documentation/gtkdoccommentparser.vala \
 	documentation/gtkdoccommentscanner.vala \
+	documentation/gtkdocmarkdownparser.vala \
+	documentation/gtkdocmarkdownscanner.vala \
+	documentation/importerhelper.vala \
 	documentation/girmetadata.vala \
 	importer/documentationimporter.vala \
 	importer/valadocdocumentationimporter.vala \
