gir-importer: markdown: resolve internal links

--- a/src/libvaladoc/Makefile.am
+++ b/src/libvaladoc/Makefile.am
@@ -60,6 +60,7 @@ libvaladoc_la_VALASOURCES = \
 	importer/valadocdocumentationimporter.vala \
 	importer/valadocdocumentationimporterscanner.vala \
 	importer/girdocumentationimporter.vala \
+	importer/internalidregistrar.vala \
 	api/symbolaccessibility.vala \
 	api/sourcecomment.vala \
 	api/girsourcecomment.vala \
