--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -62,6 +62,7 @@ TESTS = \
 	methods/bug723009.vala \
 	methods/bug723195.vala \
 	methods/bug726347.vala \
+	methods/bug736235.vala \
 	methods/generics.vala \
 	control-flow/break.vala \
 	control-flow/expressions-conditional.vala \
